<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera Overlay</string>
    <string name="description">Picture Software with Overlay</string>
    <string name="about">About</string>
    <string name="takepicture">Take</string>
    <string name="takenewpicture">New</string>
    <string name="loadfile">Open</string>
    <string name="developed">Developed By:</string>
    <string name="project">Ideia.me</string>
    <string name="url">http://ideia.me</string>
    <string name="successsaved">Save successfully!</string>
    <string name="dontsaved">Not saved! :(</string>
    <string name="savingAs">Saving As: </string>
    <string name="selectafile">Select a picture</string>
    <string name="waitloadimages">Wait load images</string>
    <string name="invert">Invert</string>
    <string name="effectsgroup">Effects</string>
    <string name="high_contrast">High Contrast</string>
    <string name="gray_scale">Gray Scale</string>
    <string name="hue1">Hue 1</string>
    <string name="hue2">Hue 2</string>
    <string name="alpha1">Green Alpha</string>
    <string name="alpha2">Red Alpha</string>
    <string name="alpha3">Blue Alpha</string>
    <string name="alpha4">Black Alpha</string>
    <string name="alpha5">White Alpha</string>
    <string name="contrast_bw">Contrast black/white</string>
    <string name="edgedetect">Edge Detect</string>
    <string name="edgedetecttransparent">Transparent with Edge</string>
    <string name="grid">Grid</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="original">Original</string>
    <string name="alpha">Transparency</string>
    <string name="preferences">Preferences</string>
    <string name="mix_effects_summary">Mix effects in the selected pic</string>
    <string name="mix_effects_title">Mix Effects</string>
    <string name="savingLayeredPicAs">Pic was saved with the current effect</string>
    <string name="error_get_camera_preview">Error trying to get camera preview</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="set_new_directory_to_camera_overlay">Set the default directory to Camera Overlay, perhaps you dont have a sdcard</string>
    <string name="title_camera_overlay_directory">Camera Overlay Directory</string>
    <string name="pref_where_save">Where save the pics</string>
    <string name="help_about_camera_overlay_directory">It\'s the directory was we save all pictures when you took the photo base first instead of use your album.</string>
    <string name="default_settings">Settings</string>
    <string name="choose_the_file">Choose image</string>
    <string name="screenshot">Screenshot</string>
    <string name="valor_1">Valor 1</string>
    <string name="valor_2">Valor 2</string>
    <string name="salvar">Salvar</string>
    <string name="digite_aqui">Digite aqui</string>
</resources>
